[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/Enemies.png" type="Texture" id=1]
[ext_resource path="res://bosses/Igor.gd" type="Script" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 112, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Stopped",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Waiting",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Igor" type="KinematicBody2D"]
collision_layer = 72
collision_mask = 65
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Waiting"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 2.25
autostart = true

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="hit" from="Hitbox" to="." method="_on_Hitbox_hit"]
[connection signal="hit_simon" from="Hitbox" to="." method="_on_Hitbox_hit_simon"]
